--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "agraciamain_assets",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
-  "keywords": ["Internet Computer", "Motoko", "JavaScript", "Canister"],
+  "keywords": [
+    "Internet Computer",
+    "Motoko",
+    "JavaScript",
+    "Canister"
+  ],
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run copy:types",
@@ -11,26 +16,44 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --exclude='*.most' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.11.3",
-    "@dfinity/candid": "0.11.3",
-    "@dfinity/principal": "0.11.3",
+    "@dfinity/agent": "0.10.3",
+    "@dfinity/candid": "0.10.3",
+    "@dfinity/principal": "0.10.3",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "events": "3.3.0",
-    "html-webpack-plugin": "5.5.0",
+    "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
-    "terser-webpack-plugin": "5.2.5",
-    "util": "0.12.4",
-    "webpack": "5.63.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "style-loader": "^3.2.1",
+    "svg-url-loader": "7.1.1",
+    "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "url-loader": "^4.1.1",
+    "util": "0.12.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "browserslist": [
     "last 2 chrome version",
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "0.10.3",
+    "@dfinity/authentication": "0.10.3",
+    "@dfinity/identity": "0.10.3",
+    "bootstrap": "^5.1.3",
+    "lit-html": "^1.4.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
+    "react-router-dom": "^5.2.0"
+  }
 }
